# social

./: .copier-answers.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.md  oca_dependencies.txt  requirements.txt  test-requirements.txt
base_ir_mail_server/: README.rst  __manifest__.py
base_mail_bcc/: README.rst  __init__.py  __manifest__.py  __openerp__.py
base_search_mail_content/: README.rst  __init__.py  __manifest__.py  __openerp__.py
base_user_signature/: README.rst  __manifest__.py
bus_presence_override/: README.rst  __manifest__.py  status_constants.py
email_template_configurator/: README.rst  __manifest__.py  __openerp__.py
email_template_multi_report/: __openerp__.py
email_template_qweb/: README.rst  __init__.py  __manifest__.py  __openerp__.py
event_registration_mass_mailing/: README.rst  __init__.py  __openerp__.py
fetchmail_gmail/: README.rst  __manifest__.py
fetchmail_mail_activity_team_activity/: README.rst  __manifest__.py
fetchmail_thread_default/: README.rst  __manifest__.py  __openerp__.py
google_gmail/: README.rst  __manifest__.py
mail_activity/: README.rst  __init__.py  __manifest__.py  __openerp__.py  hooks.py
mail_activity_auto/: README.rst  __manifest__.py
mail_activity_board/: README.rst  __init__.py  __manifest__.py
mail_activity_calendar/: README.rst  __init__.py  __openerp__.py  hooks.py
mail_activity_creator/: README.rst  __manifest__.py
mail_activity_crm/: README.rst  __manifest__.py  __openerp__.py  hooks.py
mail_activity_done/: LICENSE  README.rst  __init__.py  __manifest__.py  hooks.py
mail_activity_form/: README.rst  (+1 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+5363 files in other folders)
