[project]
name = "odoo-addons-oca-social"
version = "17.0.20240527.0"
dependencies = [
    "odoo-addon-base_search_mail_content>=17.0dev,<17.1dev",
    "odoo-addon-mail_activity_board>=17.0dev,<17.1dev",
    "odoo-addon-mail_activity_team>=17.0dev,<17.1dev",
    "odoo-addon-mail_attach_existing_attachment>=17.0dev,<17.1dev",
    "odoo-addon-mail_debrand>=17.0dev,<17.1dev",
    "odoo-addon-mail_notification_custom_subject>=17.0dev,<17.1dev",
    "odoo-addon-mail_optional_autofollow>=17.0dev,<17.1dev",
    "odoo-addon-mail_outbound_static>=17.0dev,<17.1dev",
    "odoo-addon-mail_partner_forwarding>=17.0dev,<17.1dev",
    "odoo-addon-mail_partner_opt_out>=17.0dev,<17.1dev",
    "odoo-addon-mail_send_confirmation>=17.0dev,<17.1dev",
    "odoo-addon-mail_template_substitute>=17.0dev,<17.1dev",
    "odoo-addon-mass_mailing_partner>=17.0dev,<17.1dev",
    "odoo-addon-mass_mailing_resend>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
